add fetch mdharura analytics for each live unit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,14 +9,12 @@
         "outDir": "./dist",
         "esModuleInterop": true,
         "strict": false,
-//        "baseUrl": ".",
         "baseUrl": "./src",
         "paths": {
             "*": ["*", "src/*"]
         },
-        "typeRoots": ["node_modules/@types", "./src/@types/index.d.ts"]
+        "typeRoots": ["node_modules/@types", "./src/@types/index.d.ts", "./src/@types"]
     },
     "include": ["src/**/*"],
-//    "include": ["src", "src/**/*.ts", "tests/**/*.ts"],
     "exclude": ["node_modules", "src/**/__test__"]
 }
