--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "t"
+    "url": "https://github.com/CENTERS-FOR-INTERNATIONAL-PROGRAMS/dmi-shield-integrated-api"
   },
   "keywords": [
     "nodejs",
@@ -25,7 +25,7 @@
   ],
   "author": {
     "name": "Kariuki, Brian",
-    "email": "bk2936@cumc.columbia.edu",
+    "email": "briankariukidev@gmail.com",
     "url": "https://github.com/CENTERS-FOR-INTERNATIONAL-PROGRAMS/dmi-shield-integrated-api"
   },
   "license": "ISC",
@@ -37,6 +37,7 @@
     "@theshedman/openhim-mediator-utils": "^0.3.1",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
@@ -46,7 +47,9 @@
     "express-validator": "^6.14.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
+    "morgan-body": "^2.6.9",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "node-fetch": "^2.7.0",
@@ -55,7 +58,9 @@
     "openhim-mediator-utils": "^0.2.3",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "prettyjson": "^1.2.5",
     "sequelize": "^6.6.5",
+    "serialize-error": "^8.1.0",
     "streamifier": "^0.1.1",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
