--- a/.env.copy
+++ b/.env.copy
@@ -20,6 +20,7 @@ EMAIL_PASSWORD=//
 
 MDHARURA_RAW_LINELIST_TABLE=//
 MDHARURA_RAW_AGGREGATES_TABLE=//
+MDHARURA_RAW_SCHEMA=//
 
 OPENHIM_USERNAME=//
 OPENHIM_PASSWORD=//
